--- a/public/App.css
+++ b/public/App.css
@@ -5,7 +5,7 @@
 
 html{
     font-family: Gruppo;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 a{
@@ -34,7 +34,7 @@ a{
 }
 
 #HomeLogo{
-    font-size: 2em;
+    font-size: 1.5em;
     --animate-duration: 5s;
     margin-bottom: 5px;
 }
@@ -57,4 +57,54 @@ a{
 
 .MenuItem{
     margin-right: 15px;
+}
+
+.Work{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.Loading{
+    width: 25%;
+}
+
+.ProgressBar{
+    height: 5px;
+    width: 100%;
+}
+
+#FooterContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.Footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    height: 10%;
+    font-size: 1em;
+}
+
+#canvas{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+canvas{
+    width: 100%;
+    height: 100%;
+}
+
+#scene{
+    width: 100%;
+    height: 100%;
 }
