--- a/public/App.css
+++ b/public/App.css
@@ -13,6 +13,17 @@ a{
     color: black;
 }
 
+body{
+    /* overflow: hidden; */
+}
+
+#p5 {
+    visibility: hidden;
+    height: 0%;
+    width: 0%;
+    overflow: hidden;
+}
+
 #root{
     width: 100%;
     height: 100%;
