--- a/public/App.css
+++ b/public/App.css
@@ -52,6 +52,9 @@ body{
     font-size: 1.5em;
     --animate-duration: 5s;
     margin-bottom: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #HomeDetail{
@@ -122,4 +125,15 @@ canvas{
 #scene{
     width: 100%;
     height: 100%;
+}
+
+#css, #webgl {
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 10%; left: 0;
+}
+
+#css{
+    z-index: 100;
 }
