--- a/public/App.css
+++ b/public/App.css
@@ -3,17 +3,17 @@
     src: url('./Gruppo-Regular.ttf')
 }
 
-html{
+html {
     font-family: Gruppo;
     font-size: 1.5em;
 }
 
-a{
+a {
     text-decoration: none;
     color: black;
 }
 
-body{
+body {
     overflow: hidden;
 }
 
@@ -24,22 +24,22 @@ body{
     overflow: hidden;
 }
 
-#root{
+#root {
     width: 100%;
     height: 100%;
     margin: 0;
 }
 
-.hover:hover{
+.hover:hover {
     cursor: pointer;
 }
 
-.Home{
+.Home {
     width: 100%;
     height: 100%;
 }
 
-#HomeBody{
+#HomeBody {
     height: 90%;
     width: 100%;
     display: flex;
@@ -48,7 +48,7 @@ body{
     justify-content: center;
 }
 
-#HomeLogo{
+#HomeLogo {
     font-size: 1.5em;
     --animate-duration: 5s;
     margin-bottom: 5px;
@@ -57,32 +57,34 @@ body{
     justify-content: center;
 }
 
-.hover:hover{
+.hover:hover {
     cursor: pointer;
 }
 
-#HomeAbout{
-    --animate-duration: 15s;
+#HomeAbout {
+    --animate-duration: 10s;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     color: white
 }
-#leftAlign{
+
+#leftAlign {
     text-align: left;
     width: 100%;
     height: 45%;
     margin-top: 10px;
 }
-#rightAlign{
+
+#rightAlign {
     /* margin-top: 200px; */
     text-align: right;
     width: 100%;
     margin-bottom: 10px;
 }
 
-.Header{
+.Header {
     width: 100%;
     height: 10%;
     display: flex;
@@ -90,15 +92,15 @@ body{
     justify-content: space-between;
 }
 
-#HeaderRight{
+#HeaderRight {
     display: flex;
 }
 
-.MenuItem{
+.MenuItem {
     margin-right: 15px;
 }
 
-.Work{
+.Work {
     width: 100%;
     height: 80%;
     display: flex;
@@ -106,22 +108,22 @@ body{
     justify-content: center;
 }
 
-.Loading{
+.Loading {
     width: 25%;
 }
 
-.ProgressBar{
+.ProgressBar {
     height: 5px;
     width: 100%;
 }
 
-#FooterContainer{
+#FooterContainer {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.Footer{
+.Footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -130,7 +132,7 @@ body{
     font-size: 1em;
 }
 
-#canvas{
+#canvas {
     display: flex;
     width: 100%;
     height: 100%;
@@ -138,32 +140,38 @@ body{
     justify-content: center;
 }
 
-canvas{
+canvas {
     width: 100%;
     height: 100%;
 }
 
-#scene{
+#scene {
     width: 100%;
     height: 100%;
 }
 
-#css, #webgl {
+#css,
+#webgl {
     width: 90%;
     height: 90%;
     position: absolute;
-    top: 10%; left: 0;
+    top: 10%;
+    left: 0;
 }
 
-#css{
+#css {
     z-index: 100;
 }
 
 @media only screen and (max-width: 800px) {
-    #rightAlign{
+    #rightAlign {
         /* margin-top: 200px; */
         text-align: left;
         width: 100%;
         margin-bottom: 10px;
+    }
+
+    #HomeAbout {
+        --animate-duration: 15s;
     }
 }
