--- a/public/App.css
+++ b/public/App.css
@@ -159,10 +159,36 @@ canvas {
     left: 0;
 }
 
-#css {
+#css,#cssScene {
     z-index: 100;
 }
 
+#cssScene,
+#webglScene {
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 10%;
+    left: 0;
+}
+#workwork{
+    z-index: -100;
+}
+.gallery{
+    width: 500px;
+    height: 500px;
+    z-index: -100;
+    overflow: hidden;
+}
+
+#GalleryArray{
+    visibility: hidden;
+}
+
+.slideShow{
+    width: 100%;
+    height: 100%;
+}
 @media only screen and (max-width: 800px) {
     #rightAlign {
         /* margin-top: 200px; */
