--- a/public/App.css
+++ b/public/App.css
@@ -165,30 +165,66 @@ canvas {
 
 #cssScene,
 #webglScene {
-    width: 90%;
+    width: 100%;
     height: 90%;
     position: absolute;
     top: 10%;
     left: 0;
 }
+#Work{
+    overflow: scroll;
+}
 #workwork{
     z-index: -100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .gallery{
     width: 500px;
     height: 500px;
-    z-index: -100;
-    overflow: hidden;
+    /* z-index: -100;
+    overflow: hidden; */
 }
 
 #GalleryArray{
-    visibility: hidden;
+    /* visibility: hidden; */
+    /* z-index: -100; */
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 200px;
+    height: 200px;
 }
 
 .slideShow{
-    width: 100%;
-    height: 100%;
+    --animate-duration: 4s;
+    /* background-color: white; */
+    width: 500px;
+    height: 500px;
 }
+
+each-slide > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#bg,.react-slideshow-container{
+  width: 500px;
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.each-slide span {
+  padding: 20px;
+  font-size: 20px;
+  background: #efefef;
+  text-align: center;
+}
+
 @media only screen and (max-width: 800px) {
     #rightAlign {
         /* margin-top: 200px; */
@@ -198,6 +234,6 @@ canvas {
     }
 
     #HomeAbout {
-        --animate-duration: 15s;
+        --animate-duration: 10s;
     }
 }
