--- a/public/App.css
+++ b/public/App.css
@@ -202,17 +202,20 @@ canvas {
     /* background-color: white; */
     width: 500px;
     height: 500px;
-}
-
-each-slide > div {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+
+.each-slide > div {
+  width: 100%;
+  height: 100%;
+}
+
 #bg,.react-slideshow-container{
   width: 500px;
-  height: 500px;
+  height: 450px;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -223,6 +226,23 @@ each-slide > div {
   font-size: 20px;
   background: #efefef;
   text-align: center;
+}
+
+#prevArrow,#nextArrow{
+    font-size: large;
+    color: white;
+    position: absolute;
+    right: 0;
+    --spacing: 25px;
+}
+
+#prevArrow{
+    top: var(--spacing);
+    /* left: 0; */
+}
+
+#nextArrow{
+    bottom: var(--spacing);
 }
 
 @media only screen and (max-width: 800px) {
