--- a/public/App.css
+++ b/public/App.css
@@ -269,5 +269,15 @@ canvas {
 #about{
     width: 200px;
     height: 200px;
-    color: white;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dg{
+      position: absolute;
+      z-index: 2000;
+  top: 50%;
+  left: 50%;
 }
