--- a/public/App.css
+++ b/public/App.css
@@ -258,6 +258,9 @@ canvas {
     bottom: var(--spacing);
 }
 
+/*
+ Mobile
+*/
 @media only screen and (max-width: 800px) {
     #rightAlign {
         /* margin-top: 200px; */
@@ -268,6 +271,23 @@ canvas {
 
     #HomeAbout {
         --animate-duration: 10s;
+    }
+
+    .slideShow{
+        --animate-duration: 4s;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #bg,.react-slideshow-container{
+        width: 50px;
+        height: 50px;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
     }
 }
 
