--- a/public/App.css
+++ b/public/App.css
@@ -24,7 +24,7 @@ body {
     overflow: hidden;
 }
 
-#back_button{
+#back_button {
     margin-right: 15px;
 }
 
@@ -34,7 +34,7 @@ body {
     margin: 0;
 }
 
-#App{
+#App {
     /* background-color: blue; */
 }
 
@@ -168,12 +168,12 @@ canvas {
     left: 2.5%;
 }
 
-#css,#cssScene {
+#css,
+#cssScene {
     z-index: 100;
 }
 
-#webglScene{
-}
+#webglScene {}
 
 #cssScene,
 #webglScene {
@@ -183,23 +183,26 @@ canvas {
     top: 10%;
     left: 0;
 }
-#Work{
+
+#Work {
     overflow: scroll;
 }
-#workwork{
+
+#workwork {
     z-index: -100;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.gallery{
+
+.gallery {
     width: 500px;
     height: 500px;
     z-index: -100;
     /* overflow: hidden; */
 }
 
-#GalleryArray{
+#GalleryArray {
     /* visibility: hidden; */
     /* z-index: -100; */
     position: absolute;
@@ -209,43 +212,62 @@ canvas {
     height: 200px;
 }
 
-#galleries{
+#galleries {
     z-index: -100;
     visibility: hidden;
 }
 
-.slideShow{
+.slideShow {
     --animate-duration: 4s;
     /* background-color: white; */
-    width: 500px;
+    width: 1000px;
     height: 500px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
-.each-slide > div {
-  width: 100%;
-  height: 100%;
+.each-slide>div {
+    width: 100%;
+    height: 100%;
 }
 
-#bg,.react-slideshow-container{
-  width: 500px;
-  height: 450px;
-  background-repeat: no-repeat;
+.react-slideshow-container {
+    width: 100%;
+    height: 100%;
+}
+
+.each-slide {
+    overflow: visible;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#bg {
+    transform: scale(0.9);
+    /* background-repeat: no-repeat;
   background-size: contain;
-  background-position: center;
+  background-position: center; */
 }
 
 .each-slide span {
-  padding: 20px;
-  font-size: 20px;
-  background: #efefef;
-  text-align: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    font-size: 20px;
+    background: #efefef;
+    text-align: center;
 }
 
-#prevArrow,#nextArrow{
+#prevArrow,
+#nextArrow {
     font-size: large;
     color: white;
     position: absolute;
@@ -253,30 +275,57 @@ canvas {
     --spacing: 25px;
 }
 
-#prevArrow{
+#prevArrow {
     top: var(--spacing);
     /* left: 0; */
 }
 
-#nextArrow{
+#nextArrow {
     bottom: var(--spacing);
 }
 
 
-.writeup{
+.writeup {
     width: 770px;
     margin-left: 5px;
     height: 500px;
-    overflow: scroll;
+    overflow-y: scroll;
     visibility: hidden;
     /* background-color: white; */
-    font-size: 0.9em;
-    color:white;
+    /* font-size: 0.8em; */
+    color: white;
 }
 
+#about {
+    width: 200px;
+    height: 200px;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dg {
+    position: absolute;
+    z-index: 2000;
+    top: 50%;
+    left: 50%;
+}
+
+#writeups {
+    position: absolute;
+    top: -1000;
+    z-index: 0;
+    height: 10px;
+    overflow: hidden;
+}
+
+
 /*
+============================================================================================= 
  Mobile
-*/
+============================================================================================= 
+ */
 @media only screen and (max-width: 800px) {
     #rightAlign {
         /* margin-top: 200px; */
@@ -289,7 +338,7 @@ canvas {
         --animate-duration: 10s;
     }
 
-    .slideShow{
+    .slideShow {
         --animate-duration: 4s;
         width: 50px;
         height: 50px;
@@ -298,7 +347,22 @@ canvas {
         justify-content: center;
     }
 
-    #bg,.react-slideshow-container{
+    .writeup {
+        width: 900px;
+        margin-left: 5px;
+        height: 1000px;
+        top: 0;
+        overscroll-behavior-y: contain;
+        /* overflow-y: hidden; */
+        overflow-y: scroll;
+        visibility: hidden;
+        background-color: red;
+        font-size: 2em;
+        color: white;
+    }
+
+    #bg,
+    .react-slideshow-container {
         width: 1000px;
         height: 1000px;
         background-repeat: no-repeat;
@@ -306,7 +370,8 @@ canvas {
         background-position: center;
     }
 
-    #prevArrow,#nextArrow{
+    #prevArrow,
+    #nextArrow {
         font-size: small;
         color: white;
         position: absolute;
@@ -314,26 +379,4 @@ canvas {
         --spacing: 50px;
     }
 
-}
-
-#about{
-    width: 200px;
-    height: 200px;
-    color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.dg{
-      position: absolute;
-      z-index: 2000;
-  top: 50%;
-  left: 50%;
-}
-
-#writeups{
-    position: absolute;
-    top: -1000;
-    z-index: 0;
 }
